--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
     <title>Hypixel skyblock AH flipping calculator</title>
 
     <!-- icon -->
-    <link rel="shortcut icon" href="/assets/icon.ico">
+    <link rel="./shortcut icon" href="/assets/icon.ico">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Main Style -->
-    <link href="/assets/style.css" rel="stylesheet">
-
-    <!-- Main Script -->
-    <script src="assets/js/app.js"></script>
+    <link href="./assets/style.css" rel="stylesheet">
 </head>
 
 <body>
