#6 Added heat set and changed the website a little bit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <h2 class="card-title text-center">Hypixel crafts API</h2>
 
                                 <p class="text-center">Send GET request to the <a href="https://young-tea.github.io/hypixel-crafts-api/crafts.json">https://young-tea.github.io/hypixel-crafts-api/crafts.json</a> and get JSON with all items that API contains.
-                                <br> <br> Planning to add file and link to each item soon.
+                                <br> <br> Or send GET request to the <a href="https://young-tea.github.io/hypixel-crafts-api/crafts.json">https://young-tea.github.io/hypixel-crafts-api/items/iteemname.json</a> to get json file with data of only one file.
                                 <br> <br> <a href="/assets/example.json" target="_blank" class="link-button">Structure of items in JSON</a>
                                 </p>
 
